Finishes resources page and fix homepage resize on mobile

--- a/index.css
+++ b/index.css
@@ -106,6 +106,11 @@ div.panel-left, div.panel-right {
 p.panel-text {
   font-size: 2em;
 }
+
+div.panel img {
+  max-width: 100%;
+  height: auto;
+}
 /* jumbotron end */
 
 @media only screen and (max-width: 1050px) {
@@ -136,3 +141,9 @@ p.panel-text {
   }
 }
 
+@media only screen and (max-width: 800px) {
+  div.panel-info {
+    padding: 2em 2em;
+    align-items: flex-start;
+  }
+}
